--- a/styles/user-details.css
+++ b/styles/user-details.css
@@ -2,6 +2,7 @@
   color: #444a53;
   font-size: 150%;
   font-weight: bold;
+  margin-top: 70px;
   padding: 30px 30px 0 30px;
 }
 
